tests/baselines/reference/parserComputedPropertyName41.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName41.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName41.ts (1 errors) ====
    var v = {
        [0 in []]: true
        ~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }